--- a/index.html
+++ b/index.html
@@ -13,3 +13,27 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portafolio</title>
+</head>
+<body>
+    <h1>Luis Navarro's Portafolio</h1>
+    <h2>Python And Web Developer</h2>
+    <hr />
+
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a><br></h3>
+    <img height="200px" src="./assets/images/movie-ranking.png"/><br/>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a><br/></h3>
+    <img height="200px" src="./assets/images/Birthday.png"/>
+
+    <hr />
+    <a href="./public/about.html">About Me </a><a href="./public/contact.html">Contact Me</a> 
+
+
+</body>
+</html>
