--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <hr />
 
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a><br></h3>
-    <img height="200px" src="./assets/images/movie-ranking.png"/><br/>
+    <img height="200px" src="./assets/images/ranking.png"/><br/>
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a><br/></h3>
     <img height="200px" src="./assets/images/Birthday.png"/>
 
